tests/ui/parser/extern-crate-dyn.stderr
error[E0463]: can't find crate for `foo`
  --> $DIR/extern-crate-dyn.rs:1:1
   |
LL | extern dyn crate foo;
   | ^^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0463`.
