tests/ui/parser/extern-crate-dyn.rs
extern dyn crate foo;
//~^ ERROR can't find crate for `foo`

fn main() {}
